--- a/media/cv-print.css
+++ b/media/cv-print.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -64,7 +64,7 @@ body {
 p {
 	position: relative;
 	left: 28%;
-	margin-bottom: 0.2em;
+	margin-bottom: 0em;
 	margin-right: 0;
 	width: 70%;
 }
@@ -83,7 +83,7 @@ p code {
 }
 
 
-ul { 
+ul {
 	position: relative;
 	left: 28%;
 	width: 65%;
@@ -126,7 +126,7 @@ h1 {
 	left: 28%;
 }
 
-h1+p { 
+h1+p {
 	/*subtitle*/
 	font-style: italic;
 	font-size: 110%;
@@ -134,8 +134,8 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #a00;
-	margin-top: 2em;
+	color: #1976d2;
+	margin-top: 1em;
 	position: relative;
 	top: 1.2em;
 	text-align: right;
@@ -143,12 +143,12 @@ h2 {
 }
 
 h2+p {
-	margin-top: 2.5em;
+	margin-top: 1em;
 }
 
 h3 {
 	font-size: 1em;
-	line-height: 2em; 
+	line-height: 2em;
 	color: #ccc;
 	position: relative;
 	top: 1.6em;
@@ -180,7 +180,7 @@ a:hover {
 
 em {
 	font-style: normal;
-	color: #2d4e5e 
+	color: #2d4e5e
 }
 
 strong {
@@ -191,7 +191,3 @@ strong {
 	display: none;
 	visibility: hidden;
 }
-
-
-
-
