--- a/media/cv-print.css
+++ b/media/cv-print.css
@@ -71,7 +71,7 @@ p {
 
 code {
 	font: normal normal;
-	font-size: 60%;
+	font-size: 80%;
 	/*line-height: 1em;*/
 	font-family: Menlo,monospace,sans-serif;
 	color: #ccc;
@@ -190,4 +190,12 @@ strong {
 #ghbutton {
 	display: none;
 	visibility: hidden;
+}
+
+#skills-div ul {
+	margin: 0px
+}
+
+#pi-div ul {
+	margin: 0px
 }
